# py-webserver-base

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
server/: pyproject.toml
server/src/: api.py  logger.py
tests/: test_api.py
